<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#5f0101"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView0"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/title"
        android:gravity="center"
        android:textColor="#00FFFF"
        android:textStyle="bold"
        android:textSize="30sp"/>

    <LinearLayout
          android:layout_width="310dp"
          android:layout_height="60dp"
          android:layout_marginLeft="5dp"
          android:layout_marginRight="5dp"
          android:layout_marginTop="20dp"
          android:background="#000000"
          android:orientation="horizontal" >

            <TextView
                android:id="@+id/textTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="40dp"
                android:text="@string/textTimer"
                android:textColor="#FFFFFF"
                android:layout_weight="1"
                android:textSize="40sp" />
			<TextView
                android:id="@+id/textTimer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:text="@string/textsplitseconds"
                android:layout_weight="1"
                android:textColor="#EDF507"
                android:textSize="40sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal" >

                  <Button
                      android:id="@+id/btnReset"
                      android:layout_width="100dp"
                      android:layout_height="100dp"
                      android:layout_marginRight="5dp"
                      android:text="@string/textReset" />

                  <Button
                      android:id="@+id/btnStartStop"
                      android:layout_width="100dp"
                      android:layout_height="100dp"
                      android:layout_marginLeft="5dp"
                      android:text="@string/textStartStop" />

            </LinearLayout>  
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal" >

                  <Button
                      android:id="@+id/btnSaveLap"
                      android:layout_width="100dp"
                      android:layout_height="100dp"
                      android:layout_marginRight="5dp"
                      android:text="@string/textSaveLap" />

                  <Button
                      android:id="@+id/btnSplit"
                      android:layout_width="100dp"
                      android:layout_height="100dp"
                      android:layout_marginLeft="5dp"
                      android:text="@string/textSplitResume"/>

            </LinearLayout>
            
</LinearLayout>